--- a/template/master.twig
+++ b/template/master.twig
@@ -53,6 +53,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <script src="{{system_base}}/plugins/vue/vue-runtime-template-compiler.umd.js"></script>
     
+    <script src="{{system_base}}/plugins/tinymce/js/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
+
 
     <link rel="stylesheet" href="{{system_base}}/alt-component/dist/alt-component.css">
     <script src="{{system_base}}/alt-component/dist/alt-component.umd.min.js"></script>
