--- a/pages/System/code.twig
+++ b/pages/System/code.twig
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="/alt3/plugins/ace/src-min-noconflict/ace.js"></script>
+    <script src="{{system_base}}/plugins/ace/src-min-noconflict/ace.js"></script>
     <style type="text/css" media="screen">
         #editor {
             position: absolute;
